--- a/JavaScript/public/index.html
+++ b/JavaScript/public/index.html
@@ -92,7 +92,7 @@
             <b>Note:</b> This is just a game play and it does not record any of your data.
             <br /> A session is active until you refresh this page or close the tab or browser<br /><br />
             * Combined hints like 👃✨ indicate multiple items nearby, such as a Monster (👹) and Gold (💰).<br />
-            *** 'nearby' refers to boxes directly to the left, right, top, or bottom - not diagonally adjacent.
+            ** 'nearby' refers to boxes directly to the left, right, top, or bottom - not diagonally adjacent.
           </p>
         </div>
         <!-- </p> -->
