minor updates with adsense script

--- a/JavaScript/public/index.html
+++ b/JavaScript/public/index.html
@@ -19,6 +19,9 @@
         <link rel="icon" type="image/png" href="https://firebasestorage.googleapis.com/v0/b/intuitive-ai.appspot.com/o/favicon.png?alt=media&token=d915455b-1c80-480a-92dd-254856cd0827"/>
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb65c1a24f4b989"></script>
+        <!-- adsense script -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5853073486934413"
+          crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="section">
